# syntactic

./: .ghci  .travis.yml  CONTRIBUTORS  LICENSE  README.md  syntactic.cabal
CEFP/Examples/: CodeApplication.hs  ExProg.hs  Exercise10.hs  Exercise12.hs  Exercise14.hs  SolutionsSec2.hs  Test.hs
CEFP/Imperative/: Compiler.hs  Imperative.hs
CEFP/MuFeldspar/: Core.hs  Frontend.hs  Prelude.hs  Vector.hs
Data/: DynamicAlt.hs  PolyProxy.hs
Examples/: ALaCarte.hs
Examples/MuFeldspar/: Core.hs  Test.hs  Vector.hs
Examples/NanoFeldspar/: Core.hs  Extra.hs  Test.hs  Vector.hs
Language/: Syntactic.hs
Language/Syntactic/: Constraint.hs  Sugar.hs  Syntax.hs
Language/Syntactic/Analysis/: Equality.hs  Evaluation.hs  Hash.hs  Render.hs
Language/Syntactic/Constructs/: Annotate.hs  Binding.hs  Condition.hs  Construct.hs  Decoration.hs  Identity.hs  Literal.hs  Monad.hs  Mutable.hs  MutableArray.hs  MutableReference.hs  Symbol.hs  Tuple.hs  TupleSyntacticPoly.hs  TupleSyntacticSimple.hs
Language/Syntactic/Constructs/Binding/: HigherOrder.hs  Optimize.hs
Language/Syntactic/Features/: Annotate.hs  Binding.hs  Condition.hs  Literal.hs  Monad.hs  Mutable.hs  MutableArray.hs  MutableReference.hs  PrimFunc.hs  Symbol.hs  Tuple.hs  TupleSyntacticPoly.hs  TupleSyntacticSimple.hs
Language/Syntactic/Features/Binding/: HigherOrder.hs  Optimize.hs  PartialEval.hs
Language/Syntactic/Frontend/: Monad.hs  Tuple.hs  TupleConstrained.hs
Language/Syntactic/Interpretation/: Equality.hs  Evaluation.hs  Render.hs  Semantics.hs
Language/Syntactic/Sharing/: Graph.hs  Reify.hs  ReifyHO.hs  SimpleCodeMotion.hs  StableName.hs
benchmarks/: Dynamic.hs  JoiningTypes.hs  MainBenchmark.hs  Normal.hs  WithArity.hs
examples/: Monad.hs  NanoFeldspar.hs  NanoFeldsparComp.hs  WellScoped.hs
examples/NanoFeldspar/: Core.hs  Extra.hs  Test.hs  Vector.hs
extras/: TypeUniverseClosed.hs
src/Data/: DynamicAlt.hs  NestTuple.hs  PolyProxy.hs  Syntactic.hs
src/Data/NestTuple/: TH.hs
src/Data/Syntactic/: Constraint.hs  Constructs.hs  Decoration.hs  Evaluation.hs  Functional.hs  Interpretation.hs  Sugar.hs  Syntax.hs  Traversal.hs  TypeUniverse.hs
src/Data/Syntactic/Constructs/: Binding.hs  Literal.hs
src/Data/Syntactic/Interpretation/: Default.hs  Equality.hs  Evaluation.hs  Render.hs  Semantics.hs
src/Data/Syntactic/Sugar/: Binding.hs  BindingT.hs  Monad.hs  MonadT.hs
src/Data/Syntactic/TypeUniverse/: Sub.hs  TypeUniverse.hs
src/Language/: Syntactic.hs
src/Language/Syntactic/: Constraint.hs  Decoration.hs  Functional.hs  Interpretation.hs  Sugar.hs  Syntax.hs  TH.hs  Traversal.hs
src/Language/Syntactic/Constructs/: Binding.hs  Condition.hs  Construct.hs  Decoration.hs  Identity.hs  Literal.hs  Monad.hs  Tuple.hs
src/Language/Syntactic/Constructs/Binding/: HigherOrder.hs  Optimize.hs
src/Language/Syntactic/Frontend/: Monad.hs  Tuple.hs  TupleConstrained.hs
src/Language/Syntactic/Functional/: Sharing.hs  Tuple.hs  WellScoped.hs
src/Language/Syntactic/Functional/Tuple/: TH.hs
src/Language/Syntactic/Interpretation/: Equality.hs  Evaluation.hs  Render.hs  Semantics.hs
src/Language/Syntactic/Sharing/: CodeMotion.hs  CodeMotion2.hs  Graph.hs  Reify.hs  ReifyHO.hs  SimpleCodeMotion.hs  Utils.hs
src/Language/Syntactic/Sugar/: Binding.hs  BindingT.hs  BindingTyped.hs  Monad.hs  MonadT.hs  MonadTyped.hs  Tuple.hs  TupleT.hs  TupleTyped.hs
tests/: AlgorithmTests.hs  MonadTests.hs  NanoFeldsparEval.hs  NanoFeldsparEval2.hs  NanoFeldsparTest.hs  NanoFeldsparTests.hs  NanoFeldsparTree.hs  SyntaxTests.hs  TH.hs  Tests.hs  WellScopedTests.hs
tests/gold/: ex1_Monad.txt  ex1_WS.txt  fib.comp  fib.txt  matMul.comp  matMul.txt  prog1.txt  prog2.txt  prog3.txt  prog4.txt  prog5.txt  prog6.txt  prog7.txt  prog8.txt  scProd.comp  scProd.txt  spanVec.comp  spanVec.txt  sumOfMinMax.txt
